<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.detail.DetailFragment">

    <data>

        <variable
            name="detailViewModel"
            type="com.s.basemvvm.ui.fragment.detail.DetailFragmentViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_32"
            android:text="@{detailViewModel.infoDetail.country}"
            android:layout_marginTop="@dimen/dp_16"
            tools:text="@tools:sample/us_zipcodes"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_total_case"
                android:text="@string/total_cases_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/sp_16"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_total_case"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.totalCases}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_new_case"
                android:text="@string/new_cases_label"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_new_case"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.newCases}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_total_deaths"
                android:text="@string/total_deaths_label"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_total_deaths"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.totalDeaths}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_new_deaths"
                android:text="@string/new_death_label"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_new_deaths"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.newDeaths}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_total_recovered"
                android:text="@string/total_recover_label"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_total_recovered"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.totalRecovered}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lb_active_case"
                android:text="@string/active_case_label"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/lb_active_case"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/green_300"
                android:textSize="@dimen/sp_16"
                android:text="@{ detailViewModel.infoDetail.activeCases}"
                tools:text="@tools:sample/first_names"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>